// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider constructor call with default value \`0\` returns versioned definition 1`] = `
SliderDefinition {
  "config": {
    "defaultValue": 0,
    "label": "volume",
    "max": 100,
    "min": 0,
  },
  "version": 1,
}
`;

exports[`Slider constructor call with default value \`50\` returns versioned definition 1`] = `
SliderDefinition {
  "config": {
    "defaultValue": 50,
    "label": "volume",
    "max": 100,
    "min": 0,
  },
  "version": 1,
}
`;

exports[`Slider constructor call with default value \`100\` returns versioned definition 1`] = `
SliderDefinition {
  "config": {
    "defaultValue": 100,
    "label": "volume",
    "max": 100,
    "min": 0,
  },
  "version": 1,
}
`;

exports[`Slider constructor call with default value \`undefined\` returns versioned definition 1`] = `
SliderDefinition {
  "config": {
    "defaultValue": undefined,
    "label": "volume",
    "max": 100,
    "min": 0,
  },
  "version": 1,
}
`;

exports[`Slider constructor creates slider with step 1`] = `
SliderDefinition {
  "config": {
    "defaultValue": 1,
    "label": "opacity",
    "max": 1,
    "min": 0,
    "step": 0.1,
  },
  "version": 1,
}
`;

exports[`Slider definition w/ config {"defaultValue":50,"label":"volume","min":0,"max":100} toData returns v1 data for \`0\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 0,
}
`;

exports[`Slider definition w/ config {"defaultValue":50,"label":"volume","min":0,"max":100} toData returns v1 data for \`25\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 25,
}
`;

exports[`Slider definition w/ config {"defaultValue":50,"label":"volume","min":0,"max":100} toData returns v1 data for \`50\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 50,
}
`;

exports[`Slider definition w/ config {"defaultValue":50,"label":"volume","min":0,"max":100} toData returns v1 data for \`75\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 75,
}
`;

exports[`Slider definition w/ config {"defaultValue":50,"label":"volume","min":0,"max":100} toData returns v1 data for \`100\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 100,
}
`;

exports[`Slider definition w/ config {"label":"opacity"} toData returns v1 data for \`0.5\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 0.5,
}
`;

exports[`Slider definition w/ config {"label":"opacity"} toData returns v1 data for \`0\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 0,
}
`;

exports[`Slider definition w/ config {"label":"opacity"} toData returns v1 data for \`1\` when definition version is 1 1`] = `
{
  "@@makeswift/type": "slider::v1",
  "value": 1,
}
`;

exports[`Slider definition w/ config {"label":"opacity"} toData returns v1 data for \`undefined\` when definition version is 1 1`] = `undefined`;
